# fcollections

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: doc.yaml  pre-commit.yaml  pypipublish.yaml  tests.yaml
docs/: advanced.md  api.rst  auxiliary.rst  changelog.rst  conf.py  custom.md  custom.rst  getting_started.md  getting_started.rst  index.rst  install.rst  list_result_all.html  list_result_stat_fields.html  variables_info.html
docs/_static/css/: custom.css
docs/fcollections/: getting_started.rst  list_result_cycle.html
docs/fcollections/implementations/: implementations.csv  index.rst  swot.rst
docs/implementations/: catalog.rst  implementations.csv  index.rst  l2_lr_ssh.md  l2_lr_ssh.rst  l3_lr_ssh.md  l3_lr_ssh.rst
docs/implementations/scripts/: pull_data_l2_lr_ssh.py  pull_data_l3_lr_ssh.py
integration_tests/: test_requests.py
src/fcollections/core/: __init__.py  _codecs.py  _filenames.py  _filesdb.py  _listing.py  _metadata.py  _mixins.py  _obsolete.py  _readers.py  _testers.py  _traversal.py
src/fcollections/core/assets/: style.css  template.jinja
src/fcollections/geometry/: __init__.py  _box.py  _distances.py  _extraction.py  _model.py  _search.py  _track_orientation.py
src/fcollections/implementations/: __init__.py  _collections.py  _conventions.py  _dac.py  _definitions.py  _era5.py  _gridded_sla.py  _l2_lr_ssh.py  _l2_nadir.py  _l3_lr_ssh.py  _l3_lr_ww.py  _l3_nadir.py  _mur.py  _ocean_color.py  _ohc.py  _products.py  _readers.py  _s1aowi.py  _sst.py  _swh.py
src/fcollections/implementations/_definitions/: __init__.py  _cmems.py  _constants.py  _swot.py
src/fcollections/implementations/optional/: __init__.py  _area_selectors.py  _collections.py  _model.py  _predicates.py  _reader.py
src/fcollections/missions/: __init__.py  _phases.py
src/fcollections/sad/: __init__.py  _gshhg.py  _interface.py  _karin.py
src/fcollections/time/: __init__.py  _conversions.py  _iso8601.py  _operations.py  _periods.py
src/fcollections/utilities/: constants.py  reshape.py
tests/: conftest.py  test_missions.py
tests/core/: test_filenames.py  test_filesdb.py  test_listing.py  test_metadata.py  test_mixins.py  test_obsolete.py  test_reader.py  test_traversal.py
tests/fixtures/: _auto.py  _chl.py  _dac.py  _era5.py  _generation.py  _l2_lr_ssh.py  _l3_lr_ssh.py  _l4_ssha.py  _mur.py  _nadir.py  _ohc.py  _s1aowi.py  _sst.py  _swh.py  _ww.py
tests/geometry/: test_box.py  test_distances.py  test_geometries_extraction.py  test_model_geodesy.py  test_orientation.py  test_search.py
tests/implementations/: test_cmems_regex.py  test_docstrings.py  test_preprocessors.py  test_products.py
tests/implementations/collections/: test_area_selector.py  test_chl.py  test_dac.py  test_era5.py  test_gridded_sla.py  test_l2_lr_ssh.py  test_l2_nadir.py  test_l3_lr_ssh.py  test_l3_lr_windwave.py  test_l3_nadir.py  test_mur.py  test_nadir_io.py  test_ohc.py  test_s1a_owi.py  test_sst.py  test_swh.py  utils.py
tests/resources/: KaRIn_2kms_calval_geometries_tests.geojson  KaRIn_2kms_science_geometries_tests.geojson  L3_LR_WIND_WAVE_Extended_2.0  L3_LR_WIND_WAVE_Light_2.0
tests/sad/: test_aux.py  test_cli.py  test_model.py
tests/time/: test_conversions.py  test_iso8601.py  test_operations.py  test_periods.py  test_times.py
tests/utilities/: test_reshape.py
