[project]
name = 'fcollections'
version = '0.1.0'
description = "Read a collection of files using information in their names"
authors = [
    {name = "Robin Chevrier", email = "rchevrier@groupcls.com"},
    {name = "Anne-Sophie Tonneau", email = "atonneau@groupcls.com"}
]
maintainers = [
    {name = "Robin Chevrier", email = "rchevrier@groupcls.com"},
    {name = "Anne-Sophie Tonneau", email = "atonneau@groupcls.com"}
]
requires-python = ">= 3.8"
dependencies = [
    "docstring_parser",
    "jinja2",
    "netCDF4",
    "numba",
    "numpy",
    "typer",
    "xarray"]

[tool.setuptools.packages.find]
exclude = ["**/__pycache__", "**/.ipynb_checkpoints"]

[project.urls]
Repository='https://github.com/robin-cls/fcollections'


[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]
geo = ["shapely", "geopandas", "pyinterp", "dask"]

[project.scripts]
sad = "fcollections.sad:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
