[project]
name = 'files_collections'
dynamic = ["version"]
description = "Read a collection of files using information from their names"
authors = [
    {name = "Robin Chevrier", email = "rchevrier@groupcls.com"},
    {name = "Anne-Sophie Tonneau", email = "atonneau@groupcls.com"}
]
maintainers = [
    {name = "Robin Chevrier", email = "rchevrier@groupcls.com"},
    {name = "Anne-Sophie Tonneau", email = "atonneau@groupcls.com"}
]
requires-python = ">= 3.8"
dependencies = [
    "docstring_parser",
    "fsspec",
    "jinja2",
    "netCDF4",
    "numpy",
    "requests",
    "typer",
    "xarray[io]"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Development Status :: 4 - Beta"]

[tool.setuptools.packages.find]
exclude = ["**/__pycache__", "**/.ipynb_checkpoints"]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
Repository='https://github.com/robin-cls/fcollections'


[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "sympy", "beautifulsoup4"]
geo = ["shapely", "geopandas", "pyinterp", "dask", "numba"]
doc = ["cartopy", "matplotlib", "sphinx", "sphinx-copybutton", "sphinx-design",
        "sphinx-book-theme", "myst-nb"]

[project.scripts]
sad = "fcollections.sad:main"

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    # Warnings should trigger an error by default
    "error",
    # Can be safely ignored according to
    # https://github.com/Unidata/netcdf4-python/issues/1354
    "ignore:numpy\\.ndarray size changed"
]
